--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev": "node server"
+    "dev": "node server",
+    "devStartAuth": "node authServer"
   },
   "author": "",
   "license": "ISC",
@@ -11,5 +12,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "dotenv": "^16.5.0"
   }
 }
